dev/sass/layouts.scss
@media screen and (min-width: 1920px) {
    .home-banner {
        height: 600px;
        h2 {
            padding-top: 260px;
            font-size: 42px;
        }
        h3 {
            font-size: 22px;
        }
    }
}

@media screen and (max-width: $g-container-w) {
    .g-container {
        width: auto;
    }
    .article-list {
        float: none;
        margin: 0 auto;
    }
    .g-sidebar, .search-card {
        display: none;
    }
    .pagination  {
        .page-num {
            display: none;
        }
        .page-link {
            width: 56px;
        }
    }
}

@media screen and (max-width: 768px) {
    .post-wrapper, .markdown-body, .read-next {
        width: 92%;
    }
    .post-content {
        .post-subtitle {
            width: 92%;
        }
    }
    .author-detail {
        .author-card {
            width: 92%;
        }
    }
}

@media screen and (max-width: 695px) {
    .g-header {
        position: absolute;
        top: 0;
        padding: 28px 0;
        .icon-menu {
            display: block;
        }
        .g-nav {
            position: relative;
            top: 48px;
            right: 1%;
            display: none;
            background-color: #fff;
            border-radius: 2px;
            padding: 8px 16px;
            box-shadow: 0 3px 8px rgba(0, 0, 0, .2);
            text-align: center;
            &>ul>li{
                float: none;
                height: auto;
                line-height: normal;
                margin-right: 0;
                &>a {
                    display: block;
                    padding: 16px 0;
                    font-size: 16px;
                    font-weight: bold;
                    color: #A5A8B0;
                    opacity: 1;
                }
            }
        }
    }

    .author-detail {
        .author-card {
            .sns-links {
                margin-top: 24px;
                li {
                    width: 36px;
                    height: 36px;
                    .iconfont {
                        font-size: 32px;
                        line-height: 40px;
                    }
                }
            }
        }
        .comment {
            width: 90%;
        }
    }

    .read-next {
        display: block;
    }
    .read-next-item {
        margin-bottom: 16px;
        &:first-child {
            margin-right: 0;
        }
        &:last-child {
            margin-bottom: 0;
        }
        &:hover {
            top: 0;
            box-shadow: none;
        }
        section {
            width: 90%;
            margin-left: 5%;
            margin-top: 45px;
        }
    }

    .g-banner {
        padding: 0 50px;
    }
    .home-banner, .tags-banner {
        h3 {
            margin-top: 8px;
        }
        .header-img {
            width: 695px;
        }
    }
    .home-content {
        margin-top: 0;
    }
    .article-list, .tags-content {
        width: 100%;
    }
    .tags-content {
        margin-top: 0;
    }
    .tags-banner { 
        height: 300px;
    }
    .tags-list {
        padding: 0 0 24px;
    }

    .g-footer {
        padding: 30px 0;
    }

}

@media screen and (max-width: 500px) {
    .home-banner {
        height: 400px;
        h2 {
            padding-top: 180px;
            font-size: 28px;
            line-height: 38px;
            padding-bottom: 10px;
        }
        h3 {
            margin-top: 2px;
            font-size: 18px;
            letter-spacing: 2px;
            line-height: 25px;
        }
        .header-img {
            width: 695px;
            left: -100px;
        }
    }
    .home-content {
        margin-bottom: 32px;
    }
    .article-list {
        .article-item {
            padding: 20px 16px;
            margin-bottom: 8px;
            border-left: none;
            border-right: none;
            border-radius: 0;
            box-shadow: none;
            &:first-child {
                border-top: none;
            }
            .post-cover {
                max-height: 200px;
            }
            .post-preview {
                .post-title {
                    font-size: 18px;
                    line-height: 26px;
                }
                .post-subtitle {
                    font-size: 16px;
                    line-height: 20px;
                }
            }
            .post-meta {
                margin-top: 12px;
                .post-tags {
                    display: none;
                }
                .post-date {
                    float: left;
                    margin-left: 5px;
                }
            }
        }
    }
    .pagination {
        .page-links {
            box-shadow: none;
        }
    }
    .post-header{
        padding: 0;
        height: 360px;
    }
    .post-wrapper {
        .post-tags {
            margin: 100px 0 8px;
        }
        h1 {
            font-family: "Helvetica Neue", Helvetica, Arial, "Pingfang SC", "Microsoft Yahei", Sans-serif;
        }
        .post-meta {
            margin-top: 16px;
        }
    }
    .post-content {
        padding-top: 20px;
        .post-subtitle {
            padding: 8px 0 24px;
            margin-bottom: 32px;
            &:before {
                height: 0;
            }
        }
    }
    .markdown-body {
        p, ul>li {
            font-size: 16px;
            font-weight: 300;
            -webkit-font-smoothing: auto;
            -moz-osx-font-smoothing: auto;
        }
        h1, h2, h3, h4 {
            margin-top: 24px;
        }
        table {
            margin: 16px auto;
        }
        img {
            margin: 0 auto 16px;
        }
        strong {
            font-weight: 400;
        }
        blockquote {
            p {
                font-size: 18px;
                letter-spacing: 1px;
                color: #888;
                word-break: break-all;
            }
        }
    }
}

@media screen and (max-width: 376px) { 
    .home-banner {
        h2 {
            font-size: 26px;
            line-height: 38px;
        }
        h3 {
            margin-top: 4px;
            font-size: 16px;
        }
        .header-img {
            width: 695px;
            left: -100px;
        }
    }

}

